objects/Astonous_SM__Shipping_Carrier_Credentials__mdt.object
<CustomObject>
    <description>Store Shipping carrier credentials and API end points</description>
    <fields>
        <fullName>Astonous_SM__API_End_Point__c</fullName>
        <label>API End Point</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__API_Password__c</fullName>
        <label>API Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Account_Number__c</fullName>
        <label>Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Additional_Authentication_Key_1__c</fullName>
        <inlineHelpText>Additional Parameter API authentication required by the carrier. See carrier specific documentation</inlineHelpText>
        <label>Additional Authentication Key -1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Carrier_Name__c</fullName>
        <label>Carrier Name</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fedex</fullName>
                    <default>true</default>
                    <label>Fedex</label>
                </value>
                <value>
                    <fullName>USPS</fullName>
                </value>
                <value>
                    <fullName>UPS</fullName>
                </value>
                <value>
                    <fullName>PriorityAustralia</fullName>
                </value>
                <value>
                    <fullName>IPEC</fullName>
                </value>
                <value>
                    <fullName>EasyShip</fullName>
                </value>
                <value>
                    <fullName>Australia Post</fullName>
                </value>
                <value>
                    <fullName>Fastway</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Astonous_SM__Key__c</fullName>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Meter_Number__c</fullName>
        <inlineHelpText>Meter Number for FedEx.Refer documentation for other carriers</inlineHelpText>
        <label>Meter Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Shipping Carrier Credentials</label>
    <pluralLabel>Shipping Carrier Credentials</pluralLabel>
</CustomObject>